--- a/librocksdb_sys/Cargo.toml
+++ b/librocksdb_sys/Cargo.toml
@@ -14,6 +14,7 @@ tempfile = "3.1"
 
 [features]
 default = []
+static_libcpp = []
 jemalloc = ["jemalloc-sys"]
 # portable doesn't require static link, though it's meaningless
 # when not using with static-link right now in this crate.
